--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
         crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="scroll magic tutorial, javascript, coding, Scrolling webpages, animation with TweenMax from GSAP, GSAP, Scroll Magic">
     <script src="assets/js/ScrollMagic.min.js"></script>
     <script src="assets/js/plugins/animation.gsap.min.js"></script>
     <script src="assets/js/plugins/animation.velocity.min.js"></script>
